Refactoring: Fix Sonar issues (RA-79)
* Refactoring: Fix Sonar issues, flatten services interfaces and implementations
* Refactoring: Move Cardano service to the construction package and rename it